// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox render Custom icon correctly 1`] = `
<div>
  <div
    aria-checked="true"
    class="rc-checkbox"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="rc-checkbox__icon rc-checkbox__icon--round rc-checkbox__icon--checked"
    >
      <img
        alt=""
        src="https://img.yzcdn.cn/vant/user-active.png"
      />
    </div>
    <span
      class="rc-checkbox__label"
    >
      自定义图标
    </span>
  </div>
</div>
`;

exports[`Checkbox renders correctly 1`] = `
<div>
  <div
    aria-checked="true"
    class="rc-checkbox"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="rc-checkbox__icon rc-checkbox__icon--round rc-checkbox__icon--checked"
    >
      <i
        class="rc-badge__wrapper van-icon van-icon-success"
      />
    </div>
    <span
      class="rc-checkbox__label"
    >
      Label
    </span>
  </div>
</div>
`;

exports[`Checkbox should adjust label position when using label-position prop 1`] = `
<div>
  <div
    aria-checked="true"
    class="rc-checkbox"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="rc-checkbox__label rc-checkbox__label--left"
    >
      Label
    </span>
    <div
      class="rc-checkbox__icon rc-checkbox__icon--round rc-checkbox__icon--checked"
    >
      <i
        class="rc-badge__wrapper van-icon van-icon-success"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox.Group render value correctly 1`] = `
<div>
  <div
    class="rc-checkbox-group"
  >
    <div
      aria-checked="true"
      class="rc-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="rc-checkbox__icon rc-checkbox__icon--round rc-checkbox__icon--checked"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-success"
        />
      </div>
      <span
        class="rc-checkbox__label"
      >
        选项一
      </span>
    </div>
    <div
      aria-checked="false"
      class="rc-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="rc-checkbox__icon rc-checkbox__icon--round"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-success"
        />
      </div>
      <span
        class="rc-checkbox__label"
      >
        选项二
      </span>
    </div>
    <div
      aria-checked="false"
      class="rc-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="rc-checkbox__icon rc-checkbox__icon--round"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-success"
        />
      </div>
      <span
        class="rc-checkbox__label"
      >
        选项三
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox.Group renders correctly 1`] = `
<div>
  <div
    class="rc-checkbox-group"
  >
    <div
      aria-checked="false"
      class="rc-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="rc-checkbox__icon rc-checkbox__icon--round"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-success"
        />
      </div>
      <span
        class="rc-checkbox__label"
      >
        选项一
      </span>
    </div>
    <div
      aria-checked="true"
      class="rc-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="rc-checkbox__icon rc-checkbox__icon--round rc-checkbox__icon--checked"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-success"
        />
      </div>
      <span
        class="rc-checkbox__label"
      >
        选项二
      </span>
    </div>
    <div
      aria-checked="false"
      class="rc-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="rc-checkbox__icon rc-checkbox__icon--round"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-success"
        />
      </div>
      <span
        class="rc-checkbox__label"
      >
        选项三
      </span>
    </div>
  </div>
</div>
`;
